@@ -1,3 +1,9 @@
+2019-06-27 Philipp Klaus Krause <pkk AT spth.de>
+
+	* sdas/aspdk13/pdk13pst.c,
+	  sdas/aspdk13/pdk13mch.c:
+	  Fix bug #2919 via suggestion by Free-PDK.
+
 2019-06-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* Merge pdk branch to trunk.
